# tar

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/: CODEOWNERS
.github/workflows/: GnuComment.yml  GnuTests.yml  audit.yml  ci.yml  code-quality.yml  codspeed.yml  ignore-intermittent.txt
benches/: bench_tar.rs
fuzz/: Cargo.toml
src/uu/sed/: Cargo.toml
src/uu/sed/src/: command.rs  compiler.rs  processor.rs  sed.rs
src/uu/tar/: Cargo.toml
src/uu/tar/src/: archive.rs  compression.rs  display.rs  errors.rs  list.rs  main.rs  operation.rs  options.rs  tar.rs  tar_tests.rs  util.rs
src/uu/tar/src/operations/: compression.rs  create.rs  create_tests.rs  extract.rs  extract_tests.rs  list.rs  list_tests.rs  mod.rs  operation.rs
src/uu/tar/src/options/: mod.rs  options.rs
src/uu/tar/tests/: test_cli.rs  test_errors.rs
tests/: README.md  tests.rs
tests/by-util/: test_sed.rs  test_tar.rs
tests/common/: macros.rs  mod.rs  random.rs  util.rs
util/: analyze-gnu-results.py  build-gnu.sh  compare_gnu_result.py  compare_test_results.py  gnu-json-result.py  run-gnu-test.sh  test_analyze_gnu_results.py  test_gnu_json_result.py
