# tar (uutils)
# * see the repository LICENSE, README, and CONTRIBUTING files for more information

# spell-checker:ignore (libs) bigdecimal datetime fundu gethostid kqueue libselinux mangen memmap tar uuhelp

[package]
name = "tarapp"
version = "0.0.1"
authors = ["uutils developers"]
license = "MIT"
description = "tar ~ implemented as universal (cross-platform) utils, written in Rust"
default-run = "tarapp"

homepage = "https://github.com/uutils/tar"
repository = "https://github.com/uutils/tar"
readme = "README.md"
keywords = ["tar", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]
rust-version = "1.85.0"
edition = "2024"

build = "build.rs"

[features]
default = ["feat_common_core"]
uudoc = ["zip", "uuhelp_parser"]

feat_common_core = [
  "tar",
]

[workspace.dependencies]
bytesize = "2.0.0"
chrono = { version = "0.4.37", default-features = false, features = [
  "clock",
] }
clap = { version = "4.4", features = ["wrap_help", "cargo"] }
clap_complete = "4.5"
clap_mangen = "0.2"
ctor = "0.6.0"
libc = "0.2.153"
phf = "0.13.0"
phf_codegen = "0.13.0"
rand = { version = "0.9", features = ["small_rng"] }
regex = "1.10.4"
uucore = "0.5.0"
uuhelp_parser = "0.2.0"
uutests = "0.5.0"
tar = "0.4"
tempfile = "3.10.1"
textwrap = { version = "0.16.1", features = ["terminal_size"] }
xattr = "1.3.1"
zip = "7.0"

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
ctor = { workspace = true }
phf = { workspace = true }
textwrap = { workspace = true }
uutests = { workspace = true }
uucore = { workspace = true }
uuhelp_parser = { workspace = true, optional = true }
zip = { workspace = true, optional = true }
tar = { optional = true, version = "0.0.1", package = "uu_tar", path = "src/uu/tar" }

[dev-dependencies]
chrono = { workspace = true }
libc = { workspace = true }
pretty_assertions = "1"
rand = { workspace = true }
regex = { workspace = true }
tar-rs-crate = { version = "0.4", package = "tar" }
tempfile = { workspace = true }
uucore = { workspace = true, features = ["entries", "process", "signals"] }
uutests = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
xattr = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dev-dependencies]
rlimit = "0.10.1"

[build-dependencies]
phf_codegen = { workspace = true }


[[bin]]
name = "tarapp"
path = "src/bin/tarapp.rs"

[[bin]]
name = "uudoc"
path = "src/bin/uudoc.rs"
required-features = ["uudoc"]

# The default release profile. It contains all optimizations, without
# sacrificing debug info. With this profile (like in the standard
# release profile), the debug info and the stack traces will still be available.
[profile.release]
lto = true
codegen-units = 1

# A release-like profile that is tuned to be fast, even when being fast
# compromises on binary size. This includes aborting on panic.
[profile.release-fast]
inherits = "release"
panic = "abort"

# A release-like profile that is as small as possible.
[profile.release-small]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = true
