[package]
name = "uu_sed"
version = "0.0.1"
edition = "2021"
authors = ["uutils developers"]
license = "MIT"
description = "sed ~ (uutils) stream editor for filtering/transforming text"

homepage = "https://github.com/uutils/sed"
repository = "https://github.com/uutils/sed/tree/main/src/uu/sed"
keywords = ["acl", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]


[dependencies]
uucore = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }

[lib]
path = "src/sed.rs"

[[bin]]
name = "sed"
path = "src/main.rs"
